--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div><a href="./apagarDisciplina.php">Apagar Matrícula</a></div>
         <div><a href="./exibirDisciplina.php">Exibir Uma</a></div>
         <div><a href="./exibirTodasDisciplinas.php">Exibir Todas</a></div>
+        <div><a href="./usuarioArquivo.php">Inserir novo Usuário</a></div>
     </div>
 </body>
 </html>
